PROJECT(libkiss2)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

FIND_PACKAGE(Qt4 REQUIRED)

SET(INCLUDE ${libkiss2_SOURCE_DIR}/include)
SET(SRC ${libkiss2_SOURCE_DIR}/src)

INCLUDE_DIRECTORIES(${INCLUDE})

FILE(GLOB INCLUDES ${INCLUDE}/kiss/*.h)
FILE(GLOB SOURCES ${SRC}/*.cpp)
FILE(GLOB OBJC_SOURCES ${SRC}/*.mm)

SET(CMAKE_CXX_FLAGS "-Wall")

IF(APPLE)
	ADD_DEFINITIONS(-arch i386 -arch x86_64 -g)
	LINK_DIRECTORIES(/Library/Frameworks/)
ELSEIF(UNIX)

ELSEIF(WIN32)
	SET(CMAKE_CXX_FLAGS "-Wl,--enable-auto-import")
ENDIF()

ADD_LIBRARY(kiss2 STATIC ${SOURCES} ${OBJC_SOURCES})
SET(LIBRARY_OUTPUT_PATH ${libkiss2_SOURCE_DIR}/lib)
LINK_DIRECTORIES(${libkiss2_SOURCE_DIR}/lib)

IF(APPLE)
	FIND_LIBRARY(OPENGL_LIBRARY OpenGL)
	FIND_LIBRARY(COCOA_LIBRARY Cocoa)
	FIND_LIBRARY(CORESERVICE_LIBRARY CoreServices)
	target_link_libraries(kiss2 ${OPENGL_LIBRARY} ${COCOA_LIBRARY} ${CORESERVICE_LIBRARY})
ELSE(APPLE)
	target_link_libraries(kiss2 opengl)
ENDIF(APPLE)

install(FILES ${INCLUDES} DESTINATION include/kiss)
INSTALL(TARGETS kiss2 ARCHIVE DESTINATION lib)

add_subdirectory(test)