PROJECT(libkiss2)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

FIND_PACKAGE(Qt4 REQUIRED)

SET(INCLUDE ${libkiss2_SOURCE_DIR}/include)
SET(SRC ${libkiss2_SOURCE_DIR}/src)

INCLUDE_DIRECTORIES(${INCLUDE})

FILE(GLOB INCLUDES ${INCLUDE}/kiss/*.h)
FILE(GLOB SOURCES ${SRC}/*.cpp)

SET(CMAKE_CXX_FLAGS "-Wall")

IF(APPLE)
	ADD_DEFINITIONS(-arch i386 -arch x86_64 -g)
	LINK_DIRECTORIES(/Library/Frameworks/)
	FILE(GLOB OBJC_SOURCES ${SRC}/*.mm)
ELSEIF(UNIX)

ELSEIF(WIN32)
	SET(CMAKE_CXX_FLAGS "-Wl,--enable-auto-import")
	ADD_DEFINITIONS(-fno-check-new)
	INCLUDE_DIRECTORIES(${DIRECTX}/Include)
ENDIF()

SET(LIBRARY_OUTPUT_PATH ${libkiss2_SOURCE_DIR}/lib)
ADD_LIBRARY(kiss2 STATIC ${SOURCES} ${OBJC_SOURCES})
LINK_DIRECTORIES(${libkiss2_SOURCE_DIR}/lib)

IF(APPLE)
	FIND_LIBRARY(OPENGL_LIBRARY OpenGL)
	FIND_LIBRARY(COCOA_LIBRARY Cocoa)
	FIND_LIBRARY(CORESERVICE_LIBRARY CoreServices)
	target_link_libraries(kiss2 ${OPENGL_LIBRARY} ${COCOA_LIBRARY} ${CORESERVICE_LIBRARY})
ELSEIF(UNIX)
	target_link_libraries(kiss2 opengl)
ELSEIF(WIN32)
	SET(LIBRARY_OUTPUT_PATH /lib)
	LINK_DIRECTORIES(${DIRECTX})
	target_link_libraries(kiss2 d3d9)
ENDIF(APPLE)

IF(WIN32)
install(FILES ${INCLUDES} DESTINATION /include/kiss)
INSTALL(TARGETS kiss2 ARCHIVE DESTINATION /lib)
ELSE(WIN32)
install(FILES ${INCLUDES} DESTINATION include/kiss)
INSTALL(TARGETS kiss2 ARCHIVE DESTINATION lib)
ENDIF(WIN32)

IF(NOT WIN32)
add_subdirectory(test)
ENDIF(NOT WIN32)